# LabelPrint

./: .gitignore  API.md  ARCHITECTURE.md  CMakeLists.txt  DESIGN.md  GenerateLabelTsplCn.ps1  README.md  RawTSPL.ps1  RawZPL.ps1  main.cpp  preview_render.py  zpl_label.cpp  zpl_label.h
.github/workflows/: ci.yml  release.yml
cmake/: LabelPrintConfig.cmake.in
include/labelprint/: backend.h  document.h  elements.h  ezpl_gb2312_backend.h  labelprint.h  medical_label_print.h  printer_profile.h  template.h  transport.h  tspl_backend.h  tspl_bitmap_backend.h  tspl_gb18030_backend.h  version.h  zpl_backend.h
src/backends/: detail.h  ezpl_gb2312_backend.cpp  tspl_backend.cpp  tspl_bitmap_backend.cpp  tspl_gb18030_backend.cpp  zpl_backend.cpp
src/labelprint/: medical_label_print.cpp  printer_profile.cpp
src/templates/: medical_label.cpp
src/transports/: file_transport.cpp  tcp9100_transport.cpp  windows_raw_transport.cpp
test/: quick_cn.ps1  quick_print.ps1  quick_zebra.ps1  smoke.ps1  test_backends.cpp  test_document.cpp  test_main.cpp  test_utils.h
